<resources>
    <string name="app_name">X9</string>
    <string name="form_report_title">Report title</string>
    <string name="form_report_title_hint">Big highway accident</string>
    <string name="form_report_title_error_required">Title is required</string>
    <string name="form_report_type">Report type</string>
    <string name="form_report_type_error_required">Please select a report type</string>
    <string name="form_report_description">Report description</string>
    <string name="form_report_description_hint">Two cars have collided on the highway</string>
    <string name="form_report_description_error_required">Description is required</string>
    <string name="form_report_priority">Report priority</string>
    <string name="form_report_priority_hint">Major</string>
    <string name="form_report_priority_error_required">Priority is required</string>
    <string name="form_report_priority_error_invalid">Use: Minor, Moderate, or Major</string>
    <string-array name="form_report_types">
        <item>Select report type</item>
        <item>speed camera</item>
        <item>heavy traffic</item>
        <item>accident</item>
    </string-array>
    <string-array name="form_report_priority_values">
        <item>minor</item>
        <item>moderate</item>
        <item>major</item>
    </string-array>
    <string name="form_report_latitude">Report latitude (optional)</string>
    <string name="form_report_latitude_hint">55.6596357</string>
    <string name="form_report_latitude_error_invalid">Latitude must be a decimal number</string>
    <string name="form_report_longitude">Report longitude (optional)</string>
    <string name="form_report_longitude_hint">12.5885189</string>
    <string name="form_report_longitude_error_invalid">Longitude must be a decimal number</string>
    <string name="submit_btn_text">Submit</string>
    <string name="submit_btn_loading">...</string>
    <string name="back_button_content_description">Back</string>
    <string name="login_title">Sign in</string>
    <string name="login_email_button">Email &amp; password</string>
    <string name="login_phone_button">Phone</string>
    <string name="login_google_button">Google</string>
    <string name="login_guest_button">View as guest</string>
    <string name="login_success_message">User logged in the app.</string>
    <string name="login_failed_message">Authentication failed.</string>
    <string name="report_title">New report</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="add_new">Add new</string>
    <string name="delete_report">Delete report</string>
    <string name="content_description_report_image">Traffic report photo</string>
    <string name="report_photo_caption">The image contains: %1$s</string>
    <string name="report_image_loading">Image loading</string>
    <string name="report_image_not_available">No image available</string>
    <string name="report_type_label">Type</string>
    <string name="report_description_label">Description</string>
    <string name="report_field_label">%1$s:</string>
    <string name="report_created_message">Report created</string>
    <string name="opening_camera">Opening camera...</string>
    <string name="photo_capture_success">Photo captured and ready for upload.</string>
    <string name="photo_capture_cancelled">No photo was captured.</string>
    <string name="photo_capture_unavailable">No camera app is available on this device.</string>
    <string name="photo_capture_error">Could not prepare the camera.</string>
    <string name="location_permission_required_message">Precise location access needs to be enabled for this feature</string>
    <string name="location_fetching_message">Fetching your location...</string>
    <string name="location_fetch_timeout_message">Could not get your location. Make sure location is turned on, then try again.</string>
    <string name="preference_file_key">dk.itu.moapd.x9.mhiv.PREFERENCE_FILE_KEY</string>
    <string name="notification_channel_name">Location Tracking</string>
    <string name="notification_channel_description">Notifications for location tracking service</string>
    <string name="notification_title">Tracking Location</string>
    <string name="notification_text">Location updates are active</string>
    <string name="database_error_permission_denied">Permission denied.</string>
    <string name="database_error_network">Network problem. Please try again.</string>
    <string name="database_error_generic">Something went wrong. Please try again.</string>
    <string name="traffic_report_upload_error">Something went wrong. Could not upload report</string>
    <string name="traffic_report_delete_error">Something went wrong. Could not delete report</string>
</resources>
